add lexer & parser, interpreter unfinished

--- a/picostack.vcxproj
+++ b/picostack.vcxproj
@@ -119,12 +119,17 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="ide.c" />
+    <ClCompile Include="helpers.c" />
     <ClCompile Include="interpreter.c" />
+    <ClCompile Include="lexer.c" />
+    <ClCompile Include="parser.c" />
     <ClCompile Include="stack.c" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="helpers.h" />
     <ClInclude Include="interpreter.h" />
+    <ClInclude Include="lexer.h" />
+    <ClInclude Include="parser.h" />
     <ClInclude Include="stack.h" />
   </ItemGroup>
   <ItemGroup>
